disabling some services we don't need, adding some unload option to the surefire jvm + ensuring passvation validation are done for passivable ejbs - this part is clear in the spec but not in TCKs